# spud_router

./: .gitignore  CHANGELOG.md  README.md  flake.nix  install.sh  package-lock.json
.github/workflows/: ci.yml  release.yml
backend/: api_keys.py  apply_core.py  auth.py  installer_state.py  main.py  models.py  motd  nebula_apply.py  priv.py  pyproject.toml  run-update.sh  spud-cli  ssh-banner  staging.py  state.py  tailscale_apply.py  update.py  vpn_coexistence.py  web_ui_guard.py  wireguard_apply.py
backend/cli/: __init__.py  api.py  main.py  ui.py
backend/cli/tabs/: __init__.py  dns.py  firewall.py  nebula.py  routes.py  settings.py  snmp.py  status.py  syslog.py  tailscale.py  update.py  vlans.py  vpn.py  wan.py  wireguard.py  wireless.py
backend/generators/: __init__.py  bgp.py  cloudflared.py  dnsmasq.py  doh.py  hostapd.py  iptables.py  nebula.py  netplan.py  snmp.py  sysctl.py  syslog.py  wireguard.py
backend/mcp/: __init__.py  __main__.py  config.py  http_client.py  server.py  tools.py
backend/routers/: __init__.py  api_keys.py  auth.py  bgp.py  config.py  diagnostics.py  firewall.py  mcp_mgmt.py  nebula.py  network.py  snmp.py  staging.py  syslog.py  system.py  tailscale.py  update.py  wireguard.py  wireless.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_api_bgp.py  test_api_keys.py  test_apply_core.py  test_apply_doh.py  test_apply_status.py  test_cli_api.py  test_cli_ui.py  test_commit_confirm.py  test_dhcp_reservations_api.py  test_diagnostics.py  test_generators_bgp.py  test_generators_cloudflared.py  test_generators_dnsmasq.py  test_generators_doh.py  test_generators_hostapd.py  test_generators_iptables.py  test_generators_nebula.py  test_generators_netplan.py  test_generators_snmp.py  test_generators_sysctl.py  test_generators_syslog.py  test_generators_wireguard.py  test_installer_state.py  test_iptables_behavioral.py  test_mcp_mgmt_api.py  test_mcp_server.py  test_models.py  test_nebula_api.py  test_snmp_api.py  test_staging.py  test_state.py  test_sudoers_policy.py  test_syslog_api.py  test_system_monitor_api.py  test_tls_api.py  test_update.py  test_update_api.py  (+3 more)
deploy/: cloudflared-doh.service  dnsproxy-doh.service  nebula.service  packages  spud-commit.sh  spud-router-mcp.service  sudoers
e2e/: package-lock.json  package.json  smoke.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  api.js  global.css  main.jsx
(+49 files in other folders)
