[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spud-router"
version = "0.0.0"  # authoritative version is the VERSION file written by the release workflow
description = "Router-on-a-stick web UI for Le Potato and ARM SBCs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",        # required by FastAPI TestClient
]

# The code is a flat layout imported at runtime as the `backend` package
# (`uvicorn backend.main:app`); the install here exists to pull dependencies
# and dev tools for CI. Declare packages/modules explicitly so setuptools does
# not bail out on flat-layout auto-discovery ("Multiple top-level packages").
[tool.setuptools]
py-modules = ["auth", "main", "models", "state", "update"]

[tool.setuptools.packages.find]
include = ["cli*", "routers*", "generators*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
# ".." makes the `backend` namespace package importable (matches production's
# `uvicorn backend.main:app`); "." keeps bare-module imports (generators, state,
# models) working regardless of how pytest is invoked.
pythonpath = ["..", "."]

[tool.coverage.run]
source  = ["."]
omit    = ["tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
